[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://gameover.obj" type="ArrayMesh" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 20, 2 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_energy = 0.0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.21
ambient_light_sky_contribution = 0.0

[sub_resource type="VisualShaderNodeColorConstant" id=3]
constant = Color( 0, 1, 0, 1 )

[sub_resource type="VisualShader" id=4]
code = "shader_type spatial;
render_mode specular_schlick_ggx, async_visible;




void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.000000, 1.000000, 0.000000);
	float n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -81.473, 140.554 )
nodes/fragment/2/node = SubResource( 3 )
nodes/fragment/2/position = Vector2( 280.25, 100.25 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 10, 0 )
mesh = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 10, 0 )
mesh = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.976236, -0.216712, 0, 0.216712, 0.976236, 5, 5.1878, 14.3976 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.8107, 18.782 )

[node name="piece_launcher" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 19, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.54
autostart = true

[node name="PieceHolder" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="RichTextLabel" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
text = "0"

[node name="gameover" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.79925, 8.47704, 1.78216 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
